Joining personas, missing Split into scripts and doing the falleccidos aggregate, and join with covid

--- a/notebooks/Exploration_Census.ipynb
+++ b/notebooks/Exploration_Census.ipynb
@@ -14,14 +14,7 @@
     "- [GEOREFERENCIACION](#GEOREFERENCIACION)\n",
     "- [Divipola](#Divipola)\n",
     "\n",
-    "## Goal of visualization\n",
-    "\n",
-    "## TODOs:\n",
-    "- Check the joins between all tables\n",
-    "- Look redshift\n",
-    "- look spark\n",
-    "- Save to S3\n",
-    "- Bash for aws cp\n",
+    "### Aggregations by city\n",
     "\n",
     "\n",
     "## Summary about  each dataset\n"
