--- a/notebooks/data-pipeline-v0.ipynb
+++ b/notebooks/data-pipeline-v0.ipynb
@@ -442,7 +442,10 @@
     "                             StructField(\"fecha_de_muerte\", DateType()),\n",
     "                             StructField(\"Asintomatico\", IntegerType()),\n",
     "                             StructField(\"divipola_dpto\", IntegerType()),\n",
-    "                             StructField(\"divipola_mpio\", IntegerType())\n",
+    "                             StructField(\"divipola_mpio\", IntegerType()),\n",
+    "                             StructField(\"edad_q\", IntegerType()),\n",
+    "                             StructField(\"muerto\", BooleanType()),\n",
+    "                             StructField(\"edad_muerto\", IntegerType()),\n",
     "                             ])\n",
     "    elif source == \"tests\":\n",
     "        schema = StructType([StructField(\"fecha\", DateType()),\n",
@@ -516,6 +519,141 @@
     "                             ])\n",
     "    else:\n",
     "        print(\"Source not valid. Enter one of the following sources: 'covid', 'tests'\")\n",
+    "    return schema\n",
+    "\n",
+    "def build_schema_complete(source=\"vivienda\"):\n",
+    "    \"\"\"\n",
+    "    Build schema for different sources\n",
+    "\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    source : str\n",
+    "        Table source may be: \"VIV\", \"PER\", \"HOG\", \"FALL\", \"MGN\"\n",
+    "\n",
+    "    Return:\n",
+    "    -------\n",
+    "    schema : spark.schema\n",
+    "        Spark schema for loading source table\n",
+    "    \"\"\"\n",
+    "    if source == \"fallecidos\":\n",
+    "        schema = StructType([StructField(\"U_DPTO\", IntegerType()),\n",
+    "                             StructField(\"U_MPIO\", IntegerType()),\n",
+    "                             StructField(\"UA_CLASE\", IntegerType()),\n",
+    "                             StructField(\"U_EDIFICA\", IntegerType()),\n",
+    "                             StructField(\"COD_ENCUESTAS\", IntegerType()),\n",
+    "                             StructField(\"U_VIVIENDA\", IntegerType()),\n",
+    "                             StructField(\"F_NROHOG\", IntegerType()),\n",
+    "                             StructField(\"FA1_NRO_FALL\", IntegerType()),\n",
+    "                             StructField(\"FA2_SEXO_FALL\", IntegerType()),\n",
+    "                             StructField(\"FA3_EDAD_FALL\", IntegerType()),\n",
+    "                             StructField(\"FA4_CERT_DEFUN\", IntegerType()),\n",
+    "                             StructField(\"UVA_USO_UNIDAD\", IntegerType()),\n",
+    "                             StructField(\"V_TIPO_VIV\", DoubleType()),\n",
+    "                             StructField(\"V_CON_OCUP\", DoubleType()),\n",
+    "                             StructField(\"V_TOT_HOG\", DoubleType()),\n",
+    "                             StructField(\"V_MAT_PARED\", DoubleType()),\n",
+    "                             StructField(\"V_MAT_PISO\", DoubleType()),\n",
+    "                             StructField(\"VA_EE\", DoubleType()),\n",
+    "                             StructField(\"VA1_ESTRATO\", DoubleType()),\n",
+    "                             StructField(\"VB_ACU\", DoubleType()),\n",
+    "                             StructField(\"VC_ALC\", DoubleType()),\n",
+    "                             StructField(\"VD_GAS\", DoubleType()),\n",
+    "                             StructField(\"VE_RECBAS\", DoubleType()),\n",
+    "                             StructField(\"VE1_QSEM\", DoubleType()),\n",
+    "                             StructField(\"VF_INTERNET\", DoubleType()),\n",
+    "                             StructField(\"V_TIPO_SERSA\", DoubleType()),\n",
+    "                             StructField(\"L_TIPO_INST\", DoubleType()),\n",
+    "                             StructField(\"L_EXISTEHOG\", DoubleType()),\n",
+    "                             StructField(\"L_TOT_PERL\", DoubleType()),\n",
+    "                             StructField(\"H_NRO_CUARTOS_H\", DoubleType()),\n",
+    "                             StructField(\"H_NRO_DORMIT_H\", DoubleType()),\n",
+    "                             StructField(\"H_DONDE_PREPALIM_H\", DoubleType()),\n",
+    "                             StructField(\"H_AGUA_COCIN_H\", DoubleType()),\n",
+    "                             StructField(\"HA_NRO_FALL_H\", DoubleType()),\n",
+    "                             StructField(\"HA_TOT_PER_H\", DoubleType()),\n",
+    "                             StructField(\"UA1_LOCALIDAD\", IntegerType()),\n",
+    "                             StructField(\"U_SECT_RUR\", IntegerType()),\n",
+    "                             StructField(\"U_SECC_RUR\", IntegerType()),\n",
+    "                             StructField(\"UA2_CPOB\", IntegerType()),\n",
+    "                             StructField(\"U_SECT_URB\", IntegerType()),\n",
+    "                             StructField(\"U_SECC_URB\", IntegerType()),\n",
+    "                             StructField(\"U_MZA\", IntegerType()),\n",
+    "                             StructField(\"dpto\", StringType()),\n",
+    "                             StructField(\"nom_mpio\", StringType()),\n",
+    "                             StructField(\"tipo_municipio\", StringType())])\n",
+    "    elif source == \"personas\":\n",
+    "        schema = StructType([StructField(\"U_DPTO\", IntegerType()),\n",
+    "                             StructField(\"U_MPIO\", IntegerType()),\n",
+    "                             StructField(\"UA_CLASE\", IntegerType()),\n",
+    "                             StructField(\"U_EDIFICA\", IntegerType()),\n",
+    "                             StructField(\"COD_ENCUESTAS\", IntegerType()),\n",
+    "                             StructField(\"U_VIVIENDA\", IntegerType()),\n",
+    "                             StructField(\"P_NROHOG\", IntegerType()),\n",
+    "                             StructField(\"P_NRO_PER\", IntegerType()),\n",
+    "                             StructField(\"P_SEXO\", IntegerType()),\n",
+    "                             StructField(\"P_EDADR\", IntegerType()),\n",
+    "                             StructField(\"P_PARENTESCOR\", DoubleType()),\n",
+    "                             StructField(\"PA_LUG_NAC\", IntegerType()),\n",
+    "                             StructField(\"PA_VIVIA_5ANOS\", DoubleType()),\n",
+    "                             StructField(\"PA_VIVIA_1ANO\", DoubleType()),\n",
+    "                             StructField(\"P_ENFERMO\", DoubleType()),\n",
+    "                             StructField(\"P_QUEHIZO_PPAL\", DoubleType()),\n",
+    "                             StructField(\"PA_LO_ATENDIERON\", DoubleType()),\n",
+    "                             StructField(\"PA1_CALIDAD_SERV\", DoubleType()),\n",
+    "                             StructField(\"CONDICION_FISICA\", DoubleType()),\n",
+    "                             StructField(\"P_ALFABETA\", DoubleType()),\n",
+    "                             StructField(\"PA_ASISTENCIA\", DoubleType()),\n",
+    "                             StructField(\"P_NIVEL_ANOSR\", DoubleType()),\n",
+    "                             StructField(\"P_TRABAJO\", DoubleType()),\n",
+    "                             StructField(\"P_EST_CIVIL\", DoubleType()),\n",
+    "                             StructField(\"PA_HNV\", DoubleType()),\n",
+    "                             StructField(\"PA1_THNV\", DoubleType()),\n",
+    "                             StructField(\"PA2_HNVH\", DoubleType()),\n",
+    "                             StructField(\"PA3_HNVM\", DoubleType()),\n",
+    "                             StructField(\"PA_HNVS\", DoubleType()),\n",
+    "                             StructField(\"PA1_THSV\", DoubleType()),\n",
+    "                             StructField(\"PA2_HSVH\", DoubleType()),\n",
+    "                             StructField(\"PA3_HSVM\", DoubleType()),\n",
+    "                             StructField(\"PA_HFC\", DoubleType()),\n",
+    "                             StructField(\"PA1_THFC\", DoubleType()),\n",
+    "                             StructField(\"PA2_HFCH\", DoubleType()),\n",
+    "                             StructField(\"PA3_HFCM\", DoubleType()),\n",
+    "                             StructField(\"UVA_USO_UNIDAD\", IntegerType()),\n",
+    "                             StructField(\"V_TIPO_VIV\", DoubleType()),\n",
+    "                             StructField(\"V_CON_OCUP\", DoubleType()),\n",
+    "                             StructField(\"V_TOT_HOG\", DoubleType()),\n",
+    "                             StructField(\"V_MAT_PARED\", DoubleType()),\n",
+    "                             StructField(\"V_MAT_PISO\", DoubleType()),\n",
+    "                             StructField(\"VA_EE\", DoubleType()),\n",
+    "                             StructField(\"VA1_ESTRATO\", DoubleType()),\n",
+    "                             StructField(\"VB_ACU\", DoubleType()),\n",
+    "                             StructField(\"VC_ALC\", DoubleType()),\n",
+    "                             StructField(\"VD_GAS\", DoubleType()),\n",
+    "                             StructField(\"VE_RECBAS\", DoubleType()),\n",
+    "                             StructField(\"VE1_QSEM\", DoubleType()),\n",
+    "                             StructField(\"VF_INTERNET\", DoubleType()),\n",
+    "                             StructField(\"V_TIPO_SERSA\", DoubleType()),\n",
+    "                             StructField(\"L_TIPO_INST\", DoubleType()),\n",
+    "                             StructField(\"L_EXISTEHOG\", DoubleType()),\n",
+    "                             StructField(\"L_TOT_PERL\", DoubleType()),\n",
+    "                             StructField(\"H_NRO_CUARTOS_H\", DoubleType()),\n",
+    "                             StructField(\"H_NRO_DORMIT_H\", DoubleType()),\n",
+    "                             StructField(\"H_DONDE_PREPALIM_H\", DoubleType()),\n",
+    "                             StructField(\"H_AGUA_COCIN_H\", DoubleType()),\n",
+    "                             StructField(\"HA_NRO_FALL_H\", DoubleType()),\n",
+    "                             StructField(\"HA_TOT_PER_H\", DoubleType()),\n",
+    "                             StructField(\"UA1_LOCALIDAD\", IntegerType()),\n",
+    "                             StructField(\"U_SECT_RUR\", IntegerType()),\n",
+    "                             StructField(\"U_SECC_RUR\", IntegerType()),\n",
+    "                             StructField(\"UA2_CPOB\", IntegerType()),\n",
+    "                             StructField(\"U_SECT_URB\", IntegerType()),\n",
+    "                             StructField(\"U_SECC_URB\", IntegerType()),\n",
+    "                             StructField(\"U_MZA\", IntegerType()),\n",
+    "                             StructField(\"dpto\", StringType()),\n",
+    "                             StructField(\"nom_mpio\", StringType()),\n",
+    "                             StructField(\"tipo_municipio\", StringType())])\n",
+    "    else:\n",
+    "        print(\"Source not valid. Enter one of the following sources: fallecidos, personas\")\n",
     "    return schema\n",
     "              \n",
     "def get_censo_paths(bucket_s3, directory_key):\n",
@@ -608,6 +746,29 @@
     "def add_suffix_to_cols(df, suffix):\n",
     "    for col in df.columns:\n",
     "        df = df.withColumnRenamed(col, col + suffix)\n",
+    "    return df\n",
+    "\n",
+    "def isfloat(value):\n",
+    "    try:\n",
+    "        float(value)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "\n",
+    "def add_prefix_to_cols(df, prefix, exclude_cols):\n",
+    "    columns_to_prefix = [col for col in df.columns if col not in exclude_cols]\n",
+    "    for col in columns_to_prefix:\n",
+    "        if col.isdigit():\n",
+    "            df = df.withColumnRenamed(col, prefix + col)\n",
+    "        elif isfloat(col):\n",
+    "            df = df.withColumnRenamed(col, prefix + str(int(float(col))))\n",
+    "        else:\n",
+    "            df = df.withColumnRenamed(col, prefix + col)\n",
+    "    return df\n",
+    "\n",
+    "def fillna_0(df, exclude_cols):\n",
+    "    columns_to_fill = [col for col in df.columns if col not in exclude_cols]\n",
+    "    df = df.fillna(0, subset=columns_to_fill)\n",
     "    return df"
    ]
   },
@@ -742,7 +903,14 @@
     "\n",
     "final_data_path = os.path.join(censo_covid_bucket_s3, \"final-data\")\n",
     "complete_personas_path = os.path.join(final_data_path, \"complete_personas\")\n",
-    "complete_fallecidos_path = os.path.join(final_data_path, \"complete_fallecidos\")"
+    "complete_fallecidos_path = os.path.join(final_data_path, \"complete_fallecidos\")\n",
+    "\n",
+    "aggregates_personas_path = os.path.join(final_data_path, \"aggregates_personas\")\n",
+    "aggregates_fallecidos_path = os.path.join(final_data_path, \"aggregates_fallecidos\")\n",
+    "aggregates_covid_path = os.path.join(final_data_path, \"aggregates_covid\")\n",
+    "\n",
+    "join_personas_covid_path = os.path.join(final_data_path, \"join_personas_covid\")\n",
+    "join_fallecidos_covid_path = os.path.join(final_data_path, \"join_fallecidos_covid\")"
    ]
   },
   {
