--- a/notebooks/data-aggregation-v0.ipynb
+++ b/notebooks/data-aggregation-v0.ipynb
@@ -1822,12 +1822,18 @@
     "                              F.col(\"FA3_EDAD_FALL\"))).alias(\"Avg_Death_Age_Estrato5\"), \n",
     "                 F.avg(F.when((F.col(\"VA1_ESTRATO\")==6)&(F.col(\"FA3_EDAD_FALL\")>30),\n",
     "                              F.col(\"FA3_EDAD_FALL\"))).alias(\"Avg_Death_Age_Estrato6\"), \n",
-    "                 F.sum(F.when(F.col(\"VA1_ESTRATO\")==1, 1)).alias(\"Number_of_dead_Estrato1\"), \n",
-    "                 F.sum(F.when(F.col(\"VA1_ESTRATO\")==2, 1)).alias(\"Number_of_dead_Estrato2\"), \n",
-    "                 F.sum(F.when(F.col(\"VA1_ESTRATO\")==3, 1)).alias(\"Number_of_dead_Estrato3\"), \n",
-    "                 F.sum(F.when(F.col(\"VA1_ESTRATO\")==4, 1)).alias(\"Number_of_dead_Estrato4\"), \n",
-    "                 F.sum(F.when(F.col(\"VA1_ESTRATO\")==5, 1)).alias(\"Number_of_dead_Estrato5\"), \n",
-    "                 F.sum(F.when(F.col(\"VA1_ESTRATO\")==6, 1)).alias(\"Number_of_dead_Estrato6\"), \n",
+    "                 F.sum(F.when((F.col(\"VA1_ESTRATO\")==1)&(F.col(\"FA3_EDAD_FALL\")>30), \n",
+    "                              1)).alias(\"Number_of_dead_Estrato1\"), \n",
+    "                 F.sum(F.when((F.col(\"VA1_ESTRATO\")==2)&(F.col(\"FA3_EDAD_FALL\")>30), \n",
+    "                              1)).alias(\"Number_of_dead_Estrato2\"), \n",
+    "                 F.sum(F.when((F.col(\"VA1_ESTRATO\")==3)&(F.col(\"FA3_EDAD_FALL\")>30), \n",
+    "                              1)).alias(\"Number_of_dead_Estrato3\"), \n",
+    "                 F.sum(F.when((F.col(\"VA1_ESTRATO\")==4)&(F.col(\"FA3_EDAD_FALL\")>30), \n",
+    "                              1)).alias(\"Number_of_dead_Estrato4\"), \n",
+    "                 F.sum(F.when((F.col(\"VA1_ESTRATO\")==5)&(F.col(\"FA3_EDAD_FALL\")>30), \n",
+    "                              1)).alias(\"Number_of_dead_Estrato5\"), \n",
+    "                 F.sum(F.when((F.col(\"VA1_ESTRATO\")==6)&(F.col(\"FA3_EDAD_FALL\")>30), \n",
+    "                              1)).alias(\"Number_of_dead_Estrato6\"), \n",
     "                 F.avg(F.when((F.col(\"UA_CLASE\")==1)&(F.col(\"FA3_EDAD_FALL\")>30),\n",
     "                              F.col(\"FA3_EDAD_FALL\"))).alias(\"Avg_Death_Age_Cabecera\"), \n",
     "                 F.avg(F.when((F.col(\"UA_CLASE\")==2)&(F.col(\"FA3_EDAD_FALL\")>30),\n",
@@ -1836,10 +1842,14 @@
     "                              F.col(\"FA3_EDAD_FALL\"))).alias(\"Avg_Death_Age_Rural_Disperso\"), \n",
     "                 F.avg(F.when((F.col(\"UA_CLASE\")==4)&(F.col(\"FA3_EDAD_FALL\")>30),\n",
     "                              F.col(\"FA3_EDAD_FALL\"))).alias(\"Avg_Death_Age_Resto_Rural\"), \n",
-    "                 F.sum(F.when(F.col(\"UA_CLASE\")==1, 1)).alias(\"Number_of_dead_Cabecera\"), \n",
-    "                 F.sum(F.when(F.col(\"UA_CLASE\")==2, 1)).alias(\"Number_of_dead_Centro_Poblado\"), \n",
-    "                 F.sum(F.when(F.col(\"UA_CLASE\")==3, 1)).alias(\"Number_of_dead_Rural_Disperso\"), \n",
-    "                 F.sum(F.when(F.col(\"UA_CLASE\")==4, 1)).alias(\"Number_of_dead_Resto_Rural\"),)\\\n",
+    "                 F.sum(F.when((F.col(\"UA_CLASE\")==1)&(F.col(\"FA3_EDAD_FALL\")>30), \n",
+    "                              1)).alias(\"Number_of_dead_Cabecera\"), \n",
+    "                 F.sum(F.when((F.col(\"UA_CLASE\")==1)&(F.col(\"FA3_EDAD_FALL\")>30), \n",
+    "                              1)).alias(\"Number_of_dead_Centro_Poblado\"), \n",
+    "                 F.sum(F.when((F.col(\"UA_CLASE\")==1)&(F.col(\"FA3_EDAD_FALL\")>30),\n",
+    "                              1)).alias(\"Number_of_dead_Rural_Disperso\"), \n",
+    "                 F.sum(F.when((F.col(\"UA_CLASE\")==1)&(F.col(\"FA3_EDAD_FALL\")>30),\n",
+    "                              1)).alias(\"Number_of_dead_Resto_Rural\"),)\\\n",
     "            .orderBy(F.col(\"Number_of_people_fallecidos\").desc())\n",
     "if show:\n",
     "    aggregates_fallecidos.limit(3).toPandas().T\n",
